--- a/SCSS/components/video.scss
+++ b/SCSS/components/video.scss
@@ -2,4 +2,5 @@
     @include backgroundImage;
     background-color: #efedeb;
     background-image: url(../img/bg7.jpg);
+    min-height: 100vh;
 }
