--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,8 @@ body {
   width: 100%;
   background-color: #111114;
   background-image: url(../img/bg1.jpg);
-  margin-bottom: -3.5%; }
+  margin-bottom: -3.5%;
+  min-height: 100vh; }
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .we-do {
       min-height: 800px; } }
@@ -409,8 +410,7 @@ body {
   min-height: 650px;
   width: 100%;
   background-color: #f6f0ec;
-  background-image: url(../img/bg2.jpg);
-  margin-bottom: -1.65%; }
+  background-image: url(../img/bg2.jpg); }
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .we-best {
       min-height: 800px; } }
@@ -433,6 +433,7 @@ body {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  margin-top: 0;
   padding-top: 13%;
   margin-bottom: 6%; }
   @media screen and (max-width: 768px) {
@@ -555,7 +556,13 @@ body {
   background-image: -o-linear-gradient(left, #f9b43b 0%, #eb8c38 48%, #f9b43b 74%);
   background-image: linear-gradient(90deg, #f9b43b 0%, #eb8c38 48%, #f9b43b 74%);
   padding-top: 9.5%;
-  position: relative; }
+  position: relative;
+  min-height: 100vh; }
+
+.slider .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
 
 .slider__gamb--img {
   width: 28.43rem;
@@ -570,12 +577,18 @@ body {
 
 .slider__content--consist {
   position: absolute;
-  top: -12%;
+  top: -7%;
   left: 0%;
   width: 5.6rem;
   height: 5.6rem;
   background-color: #e35028;
-  border-radius: 5px; }
+  border-radius: 5px;
+  font-size: 0;
+  border: 0;
+  cursor: pointer;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  outline: none; }
 
 .slider__gamb--text {
   font-family: Gagalin, Arial, sans-serif;
@@ -592,8 +605,8 @@ body {
 
 .slider__content--kkal {
   position: absolute;
-  top: 90%;
-  left: 1%; }
+  top: 54%;
+  left: 5%; }
 
 .slider__kkal--1200 {
   font-family: Gagalin, Arial, sans-serif;
@@ -721,36 +734,115 @@ body {
 
 .slider__linkblock--left {
   position: absolute;
-  top: 27.5%;
-  left: -2.5%; }
+  top: 39.5%;
+  left: 16.5%; }
 
 .slider__linkblock--right {
   position: absolute;
-  top: 27.5%;
-  right: -2.5%; }
+  top: 39.5%;
+  right: 11.5%; }
 
 .slider__popup {
-  position: absolute; }
-
-.slider__popup--close {
-  display: none; }
-
-.slider__popup--open {
   position: absolute;
-  display: block; }
+  display: none;
+  top: 0;
+  left: 5.6rem;
+  width: 16.8rem;
+  min-height: 20.75rem;
+  background-color: rgba(255, 255, 255, 0.9);
+  z-index: 10;
+  padding-top: 20%;
+  padding-left: 25%;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  border-radius: 5px;
+  /*&--close{
+        display: block;
+    }
+    &--open{
+        display: block;
+    }*/ }
+  @media screen and (max-width: 768px) {
+    .slider__popup {
+      width: 20.1rem; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .slider__popup {
+      width: 20.1rem; } }
+
+.slider__list {
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+
+.slider__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 4.5%;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.slider__list--title,
+.slider__list--weight {
+  text-decoration: none;
+  font-family: Ubuntu, Arial, sans-serif;
+  color: white;
+  font-size: 0.8rem;
+  font-weight: 300;
+  line-height: 1.8rem;
+  color: #2f3234; }
+
+.slider__list--svg {
+  margin-right: 8%; }
+
+.slider__list--title {
+  width: 53%;
+  font-weight: 500; }
+  @media screen and (max-width: 768px) {
+    .slider__list--title {
+      width: 50%; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .slider__list--title {
+      width: 50%; } }
+
+.slider__popup--btn {
+  display: none;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  font-size: 0;
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  background-image: url(../img/btnsliderclose.png);
+  background-repeat: no-repeat;
+  outline: none; }
+  @media screen and (max-width: 768px) {
+    .slider__popup--btn {
+      display: block;
+      top: 5%;
+      right: 5%; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .slider__popup--btn {
+      display: block;
+      top: 5%;
+      right: 5%; } }
 
 .reviews {
-  min-height: 650px;
-  width: 100%;
-  margin-bottom: -3.5%; }
+  min-height: 100vh;
+  width: 100%; }
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .reviews {
-      min-height: 650px;
       height: 100vh; } }
   @media screen and (max-width: 768px) {
     .reviews {
-      min-height: 650px;
       height: 100vh; } }
+
+.reviews__wrap {
+  min-height: 650px; }
 
 .reviews__title {
   position: absolute;
@@ -873,12 +965,11 @@ body {
       height: 25%; } }
 
 .reviews__img {
-  width: 100%;
-  height: 100%;
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
   -o-object-fit: cover;
-  object-fit: cover; }
+  object-fit: cover;
+  height: 100vh; }
 
 .btn-text1 {
   display: block; }
@@ -913,12 +1004,9 @@ body {
   @media screen and (max-width: 768px) {
     .team {
       min-height: 1025px; } }
-  @media screen and (min-width: 320px) and (max-width: 480px) {
-    .team {
-      min-height: 800px; } }
-  @media screen and (max-width: 768px) {
-    .team {
-      min-height: 1025px; } }
+
+.team__wrap {
+  min-height: 650px; }
 
 .team__right {
   position: absolute;
@@ -1194,6 +1282,9 @@ body {
     .menu {
       min-height: 1025px; } }
 
+.menu__wrap {
+  min-height: 650px; }
+
 .menu__list {
   list-style: none;
   position: absolute;
@@ -1206,7 +1297,8 @@ body {
   -ms-flex-pack: end;
   justify-content: flex-end;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  height: 100%; }
 
 .menu__item {
   display: -webkit-box;
@@ -1363,7 +1455,8 @@ body {
   width: 100%;
   background-color: #2f3234;
   background-image: url(../img/bg3.jpg);
-  padding-top: 9%; }
+  padding-top: 9%;
+  min-height: 100vh; }
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .order {
       min-height: 800px; } }
@@ -1556,7 +1649,8 @@ body {
   min-height: 650px;
   width: 100%;
   background-color: #efedeb;
-  background-image: url(../img/bg7.jpg); }
+  background-image: url(../img/bg7.jpg);
+  min-height: 100vh; }
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .video {
       min-height: 800px; } }
