--- a/SCSS/components/first-section-we-do.scss
+++ b/SCSS/components/first-section-we-do.scss
@@ -36,6 +36,7 @@ body {
     background-color: #111114;
     background-image: url(../img/bg1.jpg);
     margin-bottom: -3.5%;
+    min-height: 100vh;
 }
 
 .header__nav--link {
