--- a/SCSS/components/order.scss
+++ b/SCSS/components/order.scss
@@ -19,6 +19,7 @@
     background-color: $colorBlack;
     background-image: url(../img/bg3.jpg);
     padding-top: 9%;
+    min-height: 100vh;
 }
 .form__input,
 .form__textaria{
