--- a/SCSS/components/third-section-reviews.scss
+++ b/SCSS/components/third-section-reviews.scss
@@ -1,17 +1,20 @@
 
 
 .reviews {
-    min-height: 650px;
+    min-height: 100vh;
     width: 100%;
-    margin-bottom: -3.5%;
+    
     @include phone {
-        min-height: 650px;
+        
         height: 100vh;
     }
     @include tablet {
-        min-height:650px;
+        
         height: 100vh;
     }
+}
+.reviews__wrap{
+    min-height: 650px;
 }
 .reviews__title{
   @include  visuallyHidden;  
@@ -108,10 +111,11 @@
 }
 
 .reviews__img {
-    width: 100%;
-    height: 100%;
+    
     filter: grayscale(100%);
     object-fit:cover;
+    height: 100vh;
+   
 }
 .btn-text1{
     display: block;
