--- a/css/style.css
+++ b/css/style.css
@@ -298,6 +298,12 @@ body {
   top: 14%;
   right: 15.5%;
   z-index: 30; }
+  @media screen and (max-width: 768px) {
+    .breadcrumbs {
+      display: none; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .breadcrumbs {
+      display: none; } }
 
 .we-do__next-step {
   display: -webkit-box;
@@ -563,6 +569,26 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
+  @media screen and (max-width: 768px) {
+    .slider .container {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      padding-top: 16%; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .slider .container {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      padding-top: 24%; } }
 
 .slider__gamb--img {
   width: 28.43rem;
@@ -589,6 +615,12 @@ body {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   outline: none; }
+  @media screen and (max-width: 768px) {
+    .slider__content--consist {
+      top: -25%; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .slider__content--consist {
+      top: -39%; } }
 
 .slider__gamb--text {
   font-family: Gagalin, Arial, sans-serif;
@@ -606,7 +638,15 @@ body {
 .slider__content--kkal {
   position: absolute;
   top: 54%;
-  left: 5%; }
+  left: 1%; }
+  @media screen and (max-width: 768px) {
+    .slider__content--kkal {
+      top: 5%;
+      left: 75%; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .slider__content--kkal {
+      top: 2%;
+      left: 86%; } }
 
 .slider__kkal--1200 {
   font-family: Gagalin, Arial, sans-serif;
@@ -618,7 +658,8 @@ body {
   line-height: 1.75rem;
   position: absolute;
   top: 32%;
-  left: 23%; }
+  left: 23%;
+  color: #fcd795; }
 
 .slider__kkal--kkal {
   font-family: Gagalin, Arial, sans-serif;
@@ -629,11 +670,12 @@ body {
   font-size: 0.875rem;
   line-height: 1.75rem;
   position: absolute;
+  color: #fcd795;
   top: 85%;
   left: 23%; }
 
 .slider__kkal--svg {
-  fill: #f9b43b;
+  fill: #fcd795;
   width: 3.75rem;
   height: 3.75rem; }
 
@@ -647,6 +689,15 @@ body {
   margin: 0;
   line-height: 4rem;
   margin-bottom: 11%; }
+  @media screen and (max-width: 768px) {
+    .slider__content-title {
+      text-align: center;
+      margin-bottom: 8%; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .slider__content-title {
+      font-size: 3.57rem;
+      text-align: center;
+      margin-bottom: 5%; } }
 
 .slider__content--text {
   text-decoration: none;
@@ -656,7 +707,16 @@ body {
   font-weight: 300;
   line-height: 1.8rem;
   line-height: 1.5rem;
-  margin-bottom: -1%; }
+  margin-bottom: -3%; }
+  @media screen and (max-width: 768px) {
+    .slider__content--text {
+      margin-bottom: 0;
+      text-align: center; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .slider__content--text {
+      font-size: 1rem;
+      margin-bottom: 8%;
+      text-align: center; } }
 
 .slider__content--price {
   font-family: Gagalin, Arial, sans-serif;
@@ -666,6 +726,10 @@ body {
   line-height: 5.3rem;
   line-height: 1.75;
   color: #e35028; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .slider__content--price {
+      font-size: 3.57rem;
+      line-height: 2rem; } }
 
 .slider__content--rub {
   font-family: Gagalin, Arial, sans-serif;
@@ -676,6 +740,10 @@ body {
   font-size: 1.875rem;
   line-height: 1.75;
   color: #e35028; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .slider__content--rub {
+      font-size: 1.7rem;
+      line-height: 2rem; } }
 
 .slider__content--btn {
   background-color: #e35028;
@@ -707,6 +775,12 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
+  @media screen and (max-width: 768px) {
+    .slider__content {
+      margin-bottom: 4%; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .slider__content {
+      margin-bottom: 1%; } }
 
 .slider__content--left,
 .slider__content--right {
@@ -714,7 +788,13 @@ body {
   width: 45%; }
 
 .slider__content--right {
-  margin-left: 6.5%; }
+  margin-left: 3.5%; }
+  @media screen and (max-width: 768px) {
+    .slider__content--right {
+      width: 80%; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .slider__content--right {
+      width: 85%; } }
 
 .slider__link--left {
   display: block;
@@ -735,12 +815,28 @@ body {
 .slider__linkblock--left {
   position: absolute;
   top: 39.5%;
-  left: 16.5%; }
+  left: 14%; }
+  @media screen and (max-width: 768px) {
+    .slider__linkblock--left {
+      top: 54.5%;
+      left: 7%; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .slider__linkblock--left {
+      top: 45.5%;
+      left: 2%; } }
 
 .slider__linkblock--right {
   position: absolute;
   top: 39.5%;
-  right: 11.5%; }
+  right: 13.5%; }
+  @media screen and (max-width: 768px) {
+    .slider__linkblock--right {
+      top: 54.5%;
+      right: 4.5%; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .slider__linkblock--right {
+      top: 45.5%;
+      right: 2.5%; } }
 
 .slider__popup {
   position: absolute;
@@ -757,11 +853,12 @@ body {
   box-sizing: border-box;
   border-radius: 5px;
   /*&--close{
-        display: block;
+        display: none;
     }
     &--open{
         display: block;
-    }*/ }
+    }
+*/ }
   @media screen and (max-width: 768px) {
     .slider__popup {
       width: 20.1rem; } }
@@ -806,6 +903,14 @@ body {
     .slider__list--title {
       width: 50%; } }
 
+@media screen and (max-width: 768px) {
+  .slider__content--order {
+    text-align: center; } }
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .slider__content--order {
+    text-align: center; } }
+
 .slider__popup--btn {
   display: none;
   position: absolute;
@@ -822,12 +927,10 @@ body {
   outline: none; }
   @media screen and (max-width: 768px) {
     .slider__popup--btn {
-      display: block;
       top: 5%;
       right: 5%; } }
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .slider__popup--btn {
-      display: block;
       top: 5%;
       right: 5%; } }
 
