--- a/SCSS/components/second-section-we-best.scss
+++ b/SCSS/components/second-section-we-best.scss
@@ -33,6 +33,7 @@
     margin-left: 0;
     padding-left: 0;
     justify-content: space-between;
+    margin-bottom: 0;
     @include phone{
         flex-direction: column;
     }
