--- a/SCSS/components/third-section-reviews.scss
+++ b/SCSS/components/third-section-reviews.scss
@@ -15,6 +15,7 @@
 }
 .reviews__wrap{
     min-height: 650px;
+    height: 100vh;
 }
 .reviews__title{
   @include  visuallyHidden;  
@@ -114,7 +115,8 @@
     
     filter: grayscale(100%);
     object-fit:cover;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
    
 }
 .btn-text1{
