--- a/css/style.css
+++ b/css/style.css
@@ -964,7 +964,8 @@ body {
       height: 100vh; } }
 
 .reviews__wrap {
-  min-height: 650px; }
+  min-height: 650px;
+  height: 100vh; }
 
 .reviews__title {
   position: absolute;
@@ -1091,7 +1092,8 @@ body {
   filter: grayscale(100%);
   -o-object-fit: cover;
   object-fit: cover;
-  height: 100vh; }
+  width: 100%;
+  height: 100%; }
 
 .btn-text1 {
   display: block; }
