--- a/SCSS/components/third-section-reviews.scss
+++ b/SCSS/components/third-section-reviews.scss
@@ -3,7 +3,7 @@
 .reviews {
     min-height: 100vh;
     width: 100%;
-    
+    min-height: 650px;
     @include phone {
         
         height: 100vh;
