--- a/SCSS/layout/mixinsandvars.scss
+++ b/SCSS/layout/mixinsandvars.scss
@@ -16,7 +16,7 @@ $colorRed:#e35028;
 @mixin container {
     margin: 0;
     padding: 0;
-    
+    min-width: 320px;
     max-width: 940px;
     //width: 95%;
     margin: 0 auto;
@@ -24,7 +24,7 @@ $colorRed:#e35028;
     display: block;
     position: relative;
     min-height: 650px;
-  
+    
 }
 @mixin visuallyHidden {
     position: absolute;
@@ -105,8 +105,16 @@ $colorRed:#e35028;
         @content;
     }
 }
-
-
+@mixin beetweenTabletandDesc {
+    @media screen and  (max-width:950px) {
+        @content;
+    }
+}
+@mixin beetweenTabletandDesc2 {
+    @media screen and  (max-width:810px) {
+        @content;
+    }
+}
 
 
 /*media close*/
