--- a/css/style.css
+++ b/css/style.css
@@ -252,9 +252,15 @@ body {
   @media screen and (max-width: 768px) {
     .header__nav--btn-wrap {
       margin-left: 66%; } }
+  @media screen and (max-width: 670px) {
+    .header__nav--btn-wrap {
+      margin-left: 55%; } }
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .header__nav--btn-wrap {
       margin-left: 44%; } }
+  @media screen and (max-width: 405px) {
+    .header__nav--btn-wrap {
+      margin-left: 32%; } }
 
 .we-do__content {
   display: -webkit-box;
@@ -1563,7 +1569,8 @@ body {
   display: flex;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
-  justify-content: center; }
+  justify-content: center;
+  text-align: center; }
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .order__title {
       text-align: center;
@@ -1721,7 +1728,7 @@ body {
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .form__block input[type="checkbox"] + .checkbox-indicator {
       top: 3px;
-      left: 176px; } }
+      left: 31%; } }
 
 .form__block input[type="checkbox"]:checked + .checkbox-indicator::before,
 .form__block input[type="checkbox"]:checked + .checkbox-indicator::after {
@@ -1757,6 +1764,14 @@ body {
 .form__left,
 .form__right {
   width: 470px; }
+  @media screen and (max-width: 768px) {
+    .form__left,
+    .form__right {
+      width: 95%; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .form__left,
+    .form__right {
+      width: 95%; } }
 
 .form__right {
   margin-left: 6%; }
