--- a/SCSS/components/first-section-we-do.scss
+++ b/SCSS/components/first-section-we-do.scss
@@ -325,9 +325,11 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(47, 50, 52, 0.9);
+    background-color: rgb(47, 50, 52);
+    opacity: 0.7;
     display: none;
     z-index: 50;
+    
     @include tablet {
         display: none;
     }
