--- a/css/style.css
+++ b/css/style.css
@@ -333,7 +333,8 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(47, 50, 52, 0.9);
+  background-color: #2f3234;
+  opacity: 0.7;
   display: none;
   z-index: 50; }
   @media screen and (max-width: 768px) {
